@@ -33,9 +33,6 @@ ObserverStreams::ObserverStreams(CollectionObserver& cmgr) :
        *stream(s)->inlet(), *_outlets[s], s, ipaddress,
        MaxSize, ebdepth);
     
-    if (cmgr.header().level()==Level::Recorder)
-      eb->no_build(Sequence::Event,1<<TransitionId::L1Accept);
-
     _inlet_wires[s] = eb;
   }
   //  _vmom_appliance = new VmonAppliance(vmon());
