@@ -1,3 +1,5 @@
+2009-Oct-28 weaver	Tag V01-05-00.  Removed Recorder level.  Fixed ControlStreams bug which caused damage 0x8000
+			on Configure.
 2009-Oct-8  cpo         Fix bug with run number allocation during automatic reconfig when changing config db.  Tagged V01-03-02.
 2009-Oct-8  tomytsai    Add procInfo field into RceProxyMsg structure in rceProxy library
 2009-Oct-8  weaver      Tag V01-04-00.  Evr retrieves opcode from configuration db.
@@ -10,7 +12,6 @@
 2009-Sep-24 cpo Support for acqiris calibrations.  Also made outoforder damage persistent in acqiris until executable restarted.  Tag V01-02-00.
 2009-Sep-11 weaver  Added payload to transitions from control level (for recording configuration).
             Capped printout from event-builders.
->>>>>>> 1.39
 2009-Sep-10 tomytsai  Add Epics data collector level 1 (segment) node library in pds/epicsArch.
 2009-Aug-22 weaver  Fixed overflow of nbins in MonDescXXX.  Added method for
             removing groups from MonCds.
